<resources>
    <string name="app_name">Cards for smarts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">teste.thing@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_deck">Decks</string>
    <string name="menu_statistics">Estatística</string>
    <string name="menu_add_deck">Adicionar deck</string>
    <string name="fragment_title_cards">Cartas</string>
    <string name="about_flash_cards_intent">O que são flashcards</string>
    <string name="warning_empty_deck">Ainda não existem decks no seu acervo</string>
    <string name="create_creative_deck">Seja criativo com o nome do baralho :D</string>
    <string name="label_create">Criar</string>
    <string name="hint_deck_name">Nome do baralho</string>
    <string name="toolBar_add_deck">Adicionar baralho</string>
    <string name="toolBar_edit_deck">Editar baralho</string>
    <string name="toolBar_add_card">Adicionar carta</string>
    <string name="toolBar_edit_card">Editar carta</string>
    <string name="title_deck_of_wisdom">Deck\nof Wisdom</string>
    <string name="button_label_edit">editar</string>
    <string name="button_label_remove">Remover</string>
    <string name="button_label_start">começar</string>
    <string name="reference_title">Referência</string>
    <string name="add_card_description">adicionar card</string>
    <string name="label_card_description">Descrição</string>
    <string name="link_to_card_reference">Site de referência</string>
    <string name="create_card">Criar carta</string>
    <string name="action_about">sobre</string>
    <string name="author_name">Nikolas Freitas</string>
    <string name="class_name">Programação para web - III</string>
    <string name="action_logout">logout</string>
    <string-array name="card_answer_options">
        <item>verdadeiro</item>
        <item>falso</item>
    </string-array>
</resources>