<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cardsforsmarts.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_deck"
            app:destination="@id/nav_deck" />
    </fragment>

    <fragment
        android:id="@+id/nav_deck"
        android:name="com.example.cardsforsmarts.ui.deck.DeckFragment"
        android:label="@string/menu_deck"
        tools:layout="@layout/fragment_deck" >
        <action
            android:id="@+id/action_nav_deck_to_nav_add_deck"
            app:destination="@id/nav_put_deck" />
    </fragment>

    <fragment
        android:id="@+id/nav_put_deck"
        android:name="com.example.cardsforsmarts.ui.deck.putDeck.PutDeckFragment"
        android:label="@string/menu_add_deck"
        tools:layout="@layout/fragment_put_deck"
        >
        <argument
            android:name="deckId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
</navigation>