<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PutCard.PutCardFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView_card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_card_description"
            app:layout_constraintBottom_toTopOf="@+id/TextInputLayout_card_description"
            app:layout_constraintEnd_toEndOf="@+id/TextInputLayout_card_description"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@+id/TextInputLayout_card_description"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextInputLayout_card_description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            app:helperTextEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:maxLength="200" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_card_answer"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:backgroundTintMode="add"
            android:layout_marginTop="24dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextInputLayout_card_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_card_reference"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_card_answer">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/link_to_card_reference" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_submit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_card_reference" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>